remove AppConfig.verbose_name

--- a/pledge/locale/ar/LC_MESSAGES/django.po
+++ b/pledge/locale/ar/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-12-22 15:08+0300\n"
+"POT-Creation-Date: 2020-12-22 15:40+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -18,10 +18,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=6; plural=n==0 ? 0 : n==1 ? 1 : n==2 ? 2 : n%100>=3 "
 "&& n%100<=10 ? 3 : n%100>=11 && n%100<=99 ? 4 : 5;\n"
-
-#: administration/apps.py:7
-msgid "aaaaaaaa"
-msgstr "يييييييييي"
 
 #: administration/forms.py:19
 msgid "Excel file is not valid!"
@@ -78,10 +74,6 @@ msgid ""
 msgstr ""
 "يمكنك إضافة طلاب جدد باستخدام ملف اكسل من خلال النقر على رابط إضافة طالب."
 
-#: student/apps.py:7
-msgid "sssssss"
-msgstr "سسسسسسسسسسس"
-
 #: student/models.py:12
 msgid "Pledge"
 msgstr "تعهد"
@@ -135,10 +127,8 @@ msgid "low_performance_reasons"
 msgstr "أسباب تدني الأداء"
 
 #: student/models.py:44
-#, fuzzy
-#| msgid "low_performance_reasons"
 msgid "low_performance_other_reasons"
-msgstr "أسباب تدني الأداء"
+msgstr "الأسباب الآخرى لتدني الأداء"
 
 #: student/models.py:46
 msgid "date_added"
